--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form action="/add-event" method="POST">
         <label for="date">Event Date</label>
-        <input type="text" name="date" id="date">
+        <input type="date" name="date" id="date">
 
         <label for="name">Name</label>
         <input type="text" name="name" id="name">
